--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Cards</title>
+    <title>New User</title>
 
     <!-- Custom fonts for this template-->
 
@@ -84,43 +84,65 @@
     </div>
 
     <div>
-        <h2>Manage users</h2>
-        <a th:href="@{/users/new}">Create New User</a>
+        <h2>Manage Users | Create New User</h2>
     </div>
 
-    <div th:if="${message != null}" class="alert alert-success text-center">
-        [[${message}]]
-    </div>
-
-    <table class="table table-boardered table-striped table-hover table-responsive-xl">
-            <thead class="thead-light">
-
-                <th>User Id</th>
-                <th>Photos</th>
-
-                <th>Email</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Roles</th>
-                <th>Enabled</th>
-            </thead>
-            <tbody>
-                <tr th:each="user : ${listUsers}">
-                    <td>[[${user.id}]]</td>
-                    <td></td>
-                    <td>[[${user.email}]]</td>
-                    <td>[[${user.firstName}]]</td>
-                    <td>[[${user.lastName}]]</td>
-                    <td>[[${user.roles}]]</td>
-                    <td>[[${user.enabled}]]</td>
-
-                <td>
-                    Edit &nbsp; Delete
-                </td>
-                </tr>
-            </tbody>
-        </table>
-
+    <form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
+    th:object="${user}">
+        <div class="border border-secondary rounder p-3">
+            <div class="form-group-row">
+                <label class="col-sm-4 col-form-label">E-mail</label>
+                <div class="col-sm-8">
+                    <input type="email" class="form-control" th:field="*{email}"
+                           required minlength="8" maxlength="128"/>
+                </div>
+            </div>
+            <div class="form-group-row">
+                <label class="col-sm-4 col-form-label">First name</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" th:field="*{firstName}"
+                           required minlength="2" maxlength="45"/>
+                </div>
+            </div>
+            <div class="form-group-row">
+                <label class="col-sm-4 col-form-label">Last name</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" th:field="*{lastName}"
+                           required minlength="2" maxlength="45"/>
+                </div>
+            </div>
+            <div class="form-group-row">
+                <label class="col-sm-4 col-form-label">Password</label>
+                <div class="col-sm-8">
+                    <input type="password" class="form-control" th:field="*{password}"
+                           required minlength="8" maxlength="20"/>
+                </div>
+            </div>
+            <div class="form-group-row">
+                <label class="col-sm-4 col-form-label">Roles:</label>
+                <div class="col-sm-8">
+                    <th:block th:each="role : ${listRoles}">
+                        <input type="checkbox" th:field="*{roles}"
+                               th:text="${role.name}"
+                               th:value="${role.id}"
+                               class="m-2"
+                        />
+                        <small>[[${role.description}]]</small>
+                    </th:block>
+                </div>
+            </div>
+            <div class="form-group-row">
+                <label class="col-sm-4 col-form-label">Enabled:</label>
+                <div class="col-sm-8">
+                    <input type="checkbox" th:field="*{enabled}" />
+                </div>
+            </div>
+            <div class="text-center">
+                <input type="submit" value="Save" class="btn btn-primary m-3">
+                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel" />
+            </div>
+        </div>
+    </form>
 
     <div class="text-center">
         <p>BikeShop Control Panel - Copyright &copy; BikeShop</p>
@@ -129,5 +151,12 @@
 
 
 </body>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $("#buttonCancel").on("click", function() {
+            window.location = "[[@{/users}]]";
+        });
+    });
 
+</script>
 </html>
