Code the "checking the uniqueness of user email" functionality (initial)

--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
@@ -18,7 +18,7 @@
             rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -88,7 +88,7 @@
     </div>
 
     <form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
-    th:object="${user}">
+    th:object="${user}" onsubmit="return checkEmailUnique(this)">
         <div class="border border-secondary rounder p-3">
             <div class="form-group-row">
                 <label class="col-sm-4 col-form-label">E-mail</label>
@@ -157,6 +157,24 @@
             window.location = "[[@{/users}]]";
         });
     });
+    function checkEmailUnique(form) {
+        url = "[[@{/users/check_email}]]";
+        userEmail = $("#email").val();
+        csrfValue = $("input[name='_csrf']").val();
+        params = {email: userEmail ,_csrf: csrfValue};
+
+        $.post(url, params, function(response) {
+            if (response == 'OK'){
+                form.submit();
+           }else if (response == 'Duplicated') {
+            alert("There is another user having the email " + userEmail);
+           }
+
+        });
+
+        return false;
+
+     }
 
 </script>
 </html>
