--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="https://www.w3.org/1999/xhtml" lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
 
@@ -13,13 +13,12 @@
 
     <!-- Custom fonts for this template-->
 
-    <link
-            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-            rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
@@ -31,7 +30,7 @@
     <div>
         <nav class="navbar navbar-expand-lg bg-light">
             <a class="navbar-brand" th:href="@{/}">
-                <img th:src="@{/images/logo2.png}" alt="" height="60px" />
+                <img th:src="@{/images/logo2.png}" alt="" height="60px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -107,15 +106,23 @@
             <tbody>
                 <tr th:each="user : ${listUsers}">
                     <td>[[${user.id}]]</td>
-                    <td></td>
+                    <td><span class="fas fa-portrait fa-3x icon-dark"></span></td>
                     <td>[[${user.email}]]</td>
                     <td>[[${user.firstName}]]</td>
                     <td>[[${user.lastName}]]</td>
                     <td>[[${user.roles}]]</td>
-                    <td>[[${user.enabled}]]</td>
+
+                    <td>
+                        <a th:if="${user.enabled == true }" class="fas fa-check-circle fa-2x icon-green" href=""></a>
+                        <a th:if="${user.enabled == false }" class="fas fa-check-circle fa-2x icon-dark" href=""></a>
+                    </td>
 
                 <td>
-                    Edit &nbsp; Delete
+                    <a class="fas fa-edit fa-2x icon-green" th:href="@{'/users/edit/' + ${user.id}}"
+                       title="Edit this user">
+                    &nbsp;
+                    </a>
+                    &nbsp;<a class="fas fa-trash fa-2x" href=""></a>
                 </td>
                 </tr>
             </tbody>
@@ -123,7 +130,7 @@
 
 
     <div class="text-center">
-        <p>BikeShop Control Panel - Copyright &copy; BikeShop</p>
+        <p>BikeShop Control Panel - Copyright © BikeShop</p>
     </div>
 </div>
 
