fix: Modal display issue - Use Bootstrap Modal constructor for proper initialization and keyboard behavior

--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="https://www.w3.org/1999/xhtml" lang="en" xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:xhtml="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -21,6 +23,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
 
 </head>
 
