--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:xhtml="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -9,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>New User</title>
+    <title>[[${pageTitle}]]</title>
 
     <!-- Custom fonts for this template-->
 
@@ -22,6 +24,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -31,7 +35,7 @@
     <div>
         <nav class="navbar navbar-expand-lg bg-light">
             <a class="navbar-brand" th:href="@{/}">
-                <img th:src="@{/images/logo2.png}" alt="" height="60px" />
+                <img th:src="@{/images/logo2.png}" alt="" height="60px"/>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -84,11 +88,12 @@
     </div>
 
     <div>
-        <h2>Manage Users | Create New User</h2>
+        <h2>Manage Users |[[${pageTitle}]]</h2>
     </div>
 
     <form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
-    th:object="${user}" onsubmit="return checkEmailUnique(this)">
+          th:object="${user}" onsubmit="return checkEmailUnique(this);">
+        <input type="hidden" th:field="*{id}">
         <div class="border border-secondary rounder p-3">
             <div class="form-group-row">
                 <label class="col-sm-4 col-form-label">E-mail</label>
@@ -114,8 +119,12 @@
             <div class="form-group-row">
                 <label class="col-sm-4 col-form-label">Password</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" th:field="*{password}"
+                    <input th:if="${user.id == null }" type="password" class="form-control" th:field="*{password}"
                            required minlength="8" maxlength="20"/>
+
+                    <input th:if="${user.id != null }" type="password" class="form-control" th:field="*{password}"
+                           minlength="8" maxlength="20"/>
+
                 </div>
             </div>
             <div class="form-group-row">
@@ -134,15 +143,36 @@
             <div class="form-group-row">
                 <label class="col-sm-4 col-form-label">Enabled:</label>
                 <div class="col-sm-8">
-                    <input type="checkbox" th:field="*{enabled}" />
+                    <input type="checkbox" th:field="*{enabled}"/>
                 </div>
             </div>
             <div class="text-center">
                 <input type="submit" value="Save" class="btn btn-primary m-3">
-                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel" />
+                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel"/>
             </div>
         </div>
     </form>
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalDialog" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="modalTitle">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <span id="modalBody"></span>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="text-center">
         <p>BikeShop Control Panel - Copyright &copy; BikeShop</p>
@@ -157,24 +187,45 @@
             window.location = "[[@{/users}]]";
         });
     });
+
     function checkEmailUnique(form) {
         url = "[[@{/users/check_email}]]";
         userEmail = $("#email").val();
+        userId = $("#id").val();
         csrfValue = $("input[name='_csrf']").val();
-        params = {email: userEmail ,_csrf: csrfValue};
+        params = {id: userId, email: userEmail, _csrf: csrfValue};
+
+
+
 
         $.post(url, params, function(response) {
-            if (response == 'OK'){
+            if (response == 'OK') {
                 form.submit();
-           }else if (response == 'Duplicated') {
-            alert("There is another user having the email " + userEmail);
-           }
+            } else if (response == 'Duplicated') {
+                showModalDialog("Warning", "There is another user having the email " + userEmail);
+            } else {
+                showModalDialog("Error", "Unknown response from the server");
 
+            }
+
+        }).fail(function () {
+            showModalDialog("Error", "Could not connect to the server");
         });
 
         return false;
 
-     }
+    }
+
+
+    function showModalDialog(title, message) {
+        $("#modalTitle").text(title);
+        $("#modalBody").text(message);
+        var galleryModal = new bootstrap.Modal(document.getElementById('modalDialog'), {
+            keyboard: false
+        });
+        galleryModal.show();
+
+    }
 
 </script>
 </html>
