--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
@@ -124,13 +124,35 @@
                 <td>
                     <a class="fas fa-edit fa-2x icon-green" th:href="@{'/users/edit/' + ${user.id}}"
                        title="Edit this user">
-                    &nbsp;
+                    &nbsp;&nbsp;
                     </a>
-                    &nbsp;<a class="fas fa-trash fa-2x" href=""></a>
+                    &nbsp;<a class="fas fa-trash fa-2x icon-dark link-delete"
+                             th:href="@{'/users/delete/' + ${user.id}}"
+                             th:userId="${user.id}"
+                             title="Delete this user"></a>
                 </td>
                 </tr>
             </tbody>
         </table>
+
+    <!-- Modal -->
+    <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="modalTitle">Delete Confirmation</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="&times;"></button>
+                </div>
+                <div class="modal-body">
+                    <span id="confirmText"></span>
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-success" href="" id="yesButton">Yes</a>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">No</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <div class="text-center">
@@ -138,6 +160,23 @@
     </div>
 </div>
 
+<script type="text/javascript">
+    $(document).ready(function(){
+        $(".link-delete").on("click", function(e) {
+           e.preventDefault();
+           //alert($(this).attr("href"));
+            link = $(this);
+            userId = link.attr("userId");
+            $("#yesButton").attr("href", link.attr("href"));
+            $("#confirmText").text("Are you sure you want to delete this user with ID " + userId + "?");
+            //$("#confirmModal").modal();
+            var deleteUserModal = new bootstrap.Modal(document.getElementById('confirmModal'), {
+                keyboard: false
+            });
+            deleteUserModal.show();
+        });
+    });
+</script>
 
 </body>
 
