--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/index.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="https://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      lang="en">
+
 
 <head>
 
