--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/user_form.html
@@ -92,6 +92,7 @@
     </div>
 
     <form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
+          enctype="multipart/form-data"
           th:object="${user}" onsubmit="return checkEmailUnique(this);">
         <input type="hidden" th:field="*{id}">
         <div class="border border-secondary rounder p-3">
@@ -140,12 +141,23 @@
                     </th:block>
                 </div>
             </div>
+
             <div class="form-group-row">
                 <label class="col-sm-4 col-form-label">Enabled:</label>
                 <div class="col-sm-8">
                     <input type="checkbox" th:field="*{enabled}"/>
                 </div>
             </div>
+
+            <div class="form-group-row">
+                <label class="col-sm-4 col-form-label">Photo:</label>
+                <div class="col-sm-8">
+
+                    <input type="file" id="fileImage" name="image" accept="image/png, image/jpeg" />
+                    <img id="thumbnail"  th:src="@{${user.photosImagePath}}" alt="Photos preview">
+                </div>
+            </div>
+
             <div class="text-center">
                 <input type="submit" value="Save" class="btn btn-primary m-3">
                 <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel"/>
@@ -186,7 +198,31 @@
         $("#buttonCancel").on("click", function() {
             window.location = "[[@{/users}]]";
         });
+
+        $("#fileImage").change(function() {
+            fileSize = this.files[0].size;
+            alert("File size: " + fileSize);
+
+            if (fileSize > 1048576) {
+                this.setCustomValidity("You must choose an image less than 1mb");
+                this.reportValidity();
+            } else {
+                this.setCustomValidity("");
+                showImageThumbnail(this);
+            }
+
+        });
     });
+
+    function showImageThumbnail(fileInput){
+        var file = fileInput.files[0];
+        var reader = new FileReader();
+        reader.onload = function(e) {
+            $("#thumbnail").attr("src",e.target.result);
+        };
+
+        reader.readAsDataURL(file);
+    }
 
     function checkEmailUnique(form) {
         url = "[[@{/users/check_email}]]";
