--- a/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
+++ b/BikeShopWebParent/BikeShopBackend/src/main/resources/templates/users.html
@@ -110,7 +110,11 @@
             <tbody>
                 <tr th:each="user : ${listUsers}">
                     <td>[[${user.id}]]</td>
-                    <td><span class="fas fa-portrait fa-3x icon-dark"></span></td>
+                    <td>
+                        <span th:if="${user.photos == null}" class="fas fa-portrait fa-3x icon-dark"></span>
+                        <img th:if="${user.photos != null}"  th:src="@{${user.photosImagePath}}" alt=""/>
+                    </td>
+
                     <td>[[${user.email}]]</td>
                     <td>[[${user.firstName}]]</td>
                     <td>[[${user.lastName}]]</td>
